# HwaUtil

./: .gitignore  CMakeLists.txt  README.md  tryanything.cpp
exec/: CMakeLists.txt
exec/ArgumentReaderTest/: CMakeLists.txt  input.txt
exec/ClassProject/: CMakeLists.txt  main.cpp  misc.h
exec/ClassProject/resources/test/: Distribution.txt  INPUT.txt
exec/MPIAdd/: CMakeLists.txt  MPIAdd.cpp  input.txt
exec/MatDemoTest/: CMakeLists.txt
exec/MatManipTest/: CMakeLists.txt  MatManipTest.cpp
exec/MatManipTest/args/: diago2.txt  diago3.txt  matmul1.txt
exec/MatTransmit/: CMakeLists.txt  MatTransmit.cpp  input.txt
exec/TimerTest/: CMakeLists.txt  TimerTest.cpp  input.txt
src/: CMakeLists.txt
src/ArgumentReader/: ArgumentReader.cpp  ArgumentReader.h  CMakeLists.txt
src/Mat_Demo/: CMakeLists.txt  Mat_Demo.cpp  Mat_Demo.h
src/Timer/: CMakeLists.txt  Timer.cpp  Timer.h
test/: CMakeLists.txt
test/ArgumentReaderTest/: ArgumentReaderTest.cpp  CMakeLists.txt  input.txt
test/MatDemoTest/: CMakeLists.txt  MatDemoTest.cpp
test/MatManipTest/: CMakeLists.txt  MatManipTest.cpp  input.txt
test/MatManipTest/args/: diago1.txt  matmul2.txt  matmul3.txt  matmul4.txt  matmul5.txt
test/TimerTest/: CMakeLists.txt  TimerTest.cpp  input.txt
